# MendRune

./: Containerfile  IMPLEMENTATION_PLAN.md  README.md  SPECIFICATION.md  pyproject.toml
campaigns/example/: setup.py
recipes/: adapt-patch.yaml
src/mendrune/: __init__.py  __main__.py  cli.py  config.py  errors.py  executor.py  goose.py  models.py  oracle.py  orchestrator.py  patches.py  paths.py  policy.py  regression.py  reporting.py  repository.py  runstore.py  scanner.py  state.py  storage.py  verify.py
tests/integration/: test_documented_example.py  test_phase_a.py  test_phase_b.py  test_verify_cli.py
tests/runtime/: test_executor_runtime.py
tests/security/: test_hostile_git_and_diffs.py  test_hostile_outputs.py  test_hostile_yaml_and_files.py
tests/unit/: test_cli.py  test_config.py  test_executor.py  test_goose.py  test_models.py  test_oracle.py  test_orchestrator.py  test_patches.py  test_paths.py  test_policy.py  test_regression.py  test_reporting.py  test_repository.py  test_runstore.py  test_scanner.py  test_state.py  test_storage.py
