[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mendrune"
version = "0.1.0.dev0"
description = "Verify ordered security remediation campaigns"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Lobster Trap" },
]
dependencies = [
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
]

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "ruff>=0.15,<1",
  "ty>=0.0.1a20,<1",
]

[project.scripts]
mendrune = "mendrune.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mendrune"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.12"
